test/tests/errors/error-class-proc-clear-return.sm
// true
// true
// false
/**/
/**/

program {
    output valof: int {
        class T {
            proc t() {
                return 1;
            }
        }

        (new T()).t();
    };
}